# odenise

./: .gitignore  CONTEXT.md  README.fr.md
docs/: context_readme.txt
odenise/: CMakeLists.txt  Cmakepresets.json
odenise/cmake/: CTestCustom.cmake.in
odenise/example/: audio_input.hpp  modules.hpp  pipeline.hpp  ring.hpp
odenise/example/abstract 1/: ring.hpp
odenise/lib/audio/: CmakeLists.txt
odenise/lib/chain/: CMakeLists.txt
odenise/lib/log/: CMakeLists.txt
odenise/lib/thread/: CMakeLists.txt
odenise/po/: LINGUAS  POTFILES.in
odenise/src/core/: CMakeLists.txt  engine.cpp  loader.cpp  ns_engine.h
odenise/src/core/audio/: AudioEditor.cpp  AudioEditor.h  AudioProcessor.cpp  AudioProcessor.h
odenise/src/core/backends/: backend_cpu.cpp  backend_cuda.cu
odenise/src/core/chain/: audio_chain.cpp  audio_chain.h
odenise/src/core/engine/: engine.cpp  engine.h
odenise/src/core/interfaces/: engine.h  ns_engine.h
odenise/src/core/registry/: loader.cpp  module_registry.cpp  module_registry.h
odenise/src/core/tools/: common.h  debug.h  gxthread.cc  gxthread.h  lang.h  logger.cc  logger.h
odenise/src/modules/: CMakeLists.txt
odenise/src/modules/backends/: backend_cpu.cpp  backend_cpu.h  stft_chain.cu
odenise/src/modules/passthrough/: passthrough.cpp
odenise/src/modules/suppression/: passthrough.cpp  passthrough.h
odenise/src/plugin/juce/: CMakeLists.txt
odenise/src/plugin/juce/src/: JuceAudioLayer.cpp  JuceAudioLayer.h  JucePlugin.cpp  JucePlugin.h
odenise/src/plugin/juce/ui/: AudioChainView.cpp  AudioChainView.h  JuceEditorComponent.cpp  JuceEditorComponent.h
odenise/tests/: CMakeLists.txt  main.cc  test_core.cpp
